<resources>
    <string name="app_name">PlotTwist</string>
    <string name="register_text">Registrarse</string>
    <string name="login_text">Iniciar Sesión</string>
    <string name="writer">Escritor</string>
    <string name="reader">Lector</string>
    <string name="bussines">Negocio</string>
    <string name="name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="mail">e-mail</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="age">edad</string>
    <string name="conf_password">Confirme contraseña</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="sex">Sexo </string>

    <string name="title_text"> Titulo</string>
    <string name="body_text"> Cuerpo</string>
    <string name="address_text">Dirección</string>
    <string name="Create">Crear</string>
    <string name="summary_text">Resumen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_recommendations">Recomendaciones</string>
    <string name="title_write">Escribir</string>

    <string name="rol_writer">esc</string>
    <string name="rol_reader">rea</string>
    <string name="rol_bussiness">bus</string>
    <string name="mock_text">deberia haber algo aqui pero no hay </string>

    <string name="success_publish">Su historia se publicó correctamente. ¡Yey! </string>
    <string name="failure_action">Yikes, algo salió mal. </string>
    <string name="succesful_signup">Su cuenta fue creada satistactoriamente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body_hint">ingrese su historia</string>
    <string name="error_text">Ocurrió un error al procesar su petición</string>


</resources>
