<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_image_background"
    tools:context=".viewcontrollers.Activities.RegisterActivity">


    <TextView
        android:id="@+id/registerTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="@dimen/medium_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/writerButton"
        android:text="@string/bussines"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="@dimen/big_button_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />
    <Button
        android:id="@+id/readerButton"
        android:text="@string/reader"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="@dimen/big_button_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/writerButton"
        />
    <Button
        android:id="@+id/bussinessButton"
        android:text="@string/writer"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="@dimen/big_button_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/readerButton"
        />


</android.support.constraint.ConstraintLayout>