<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewcontrollers.fragments.WriteFragment">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/titleTextView"
            android:layout_width="@dimen/medium_text_width"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/title_text"/>
        <EditText
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            />
        <EditText
            android:id="@+id/bodytextView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@id/addressTextView"
            />
        <Button
            android:id="@+id/createButtom"
            android:layout_width="@dimen/big_button_width"
            android:layout_height="@dimen/big_button_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodytextView"
            android:text="@string/Create"
            />

    </android.support.constraint.ConstraintLayout>





</FrameLayout>