<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_image_background"
    tools:context=".viewcontrollers.Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="@dimen/medium_image_width"
        android:layout_height="@dimen/medium_image_height"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_mainicon" />
    <EditText
        android:id="@+id/mailTextInput"
        android:layout_width="@dimen/big_input_width"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/mail"
        android:textColorHint="#ffff"
        android:textColor="#ffff"

        />
    <EditText
        android:id="@+id/passTextIput"
        android:layout_width="@dimen/big_input_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mailTextInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/password"
        android:textColorHint="#ffff"
        android:textColor="#ffff"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/big_button_width"
        android:layout_height="@dimen/big_button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login_text"
        />




</android.support.constraint.ConstraintLayout>